tests/machine/x/c/partial_application.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>

int add(int a, int b) {
    return (a + b);
}

int main() {
    int add5 = add(5);
    printf("%d\n", add5(3));
    return 0;
}
